fixing spacing

--- a/incident_viewer_demo/src/App.scss
+++ b/incident_viewer_demo/src/App.scss
@@ -53,3 +53,7 @@ $background: #FFFFFF;
   max-width: 1000px;
   min-width: 250px;
 }
+
+.exclamation {
+  margin: 0 5px;
+}
